# devmate-agent

./: .env.example  .gitignore  README.md
agent-python/: pyproject.toml  requirements.txt
agent-python/app/: config.py  main.py
agent-python/app/schemas/: rag.py  requirement.py
agent-python/app/workflows/: rag_query.py  requirement_analysis.py
agent-python/config/: config.example.yaml
backend-go/: go.mod
backend-go/cmd/llmcheck/: main.go
backend-go/cmd/server/: main.go
backend-go/config/: config.example.yaml
backend-go/internal/agentclient/: client.go
backend-go/internal/api/: errors.go  errors_test.go  router.go
backend-go/internal/config/: config.go  config_test.go
backend-go/internal/llm/: openai_compatible.go  openai_compatible_test.go  types.go
backend-go/internal/requirement/: analyzer.go  analyzer_test.go  errors.go  input.go  input_test.go  prompt.go  prompt_test.go
backend-go/internal/task/: error.go  store.go  store_test.go
deploy/: docker-compose.yml
docs/: ARCHITECTURE.md  CURRENT_STAGE.md  DECISIONS.md  LLM_CLIENT.md  RAG_DESIGN.md  ROADMAP.md  RUNBOOK.md  STAGE_1_REVIEW.md  STAGE_2_REVIEW.md  WORKING_AGREEMENT.md
evals/: rag_questions.jsonl  requirement_samples.jsonl  run_requirement_eval.py
examples/: requirement_demo.py
