[project]
name = "devmate-agent-service"
version = "0.1.0"
description = "Python Agent service for DevMate Agent"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.0",
  "httpx>=0.28.0",
  "langgraph>=0.2.0",
  "llama-index>=0.12.0"
]

[tool.uvicorn]
factory = false
